--- a/index.html
+++ b/index.html
@@ -171,10 +171,44 @@ blockquote {
         <figcaption>Edward R. Murrow</figcaption>
       </figure>
 
+      <figure>
+        <blockquote>
+          Tylko w ogniu można wykuć miecz.
+        </blockquote>
+        <figcaption>Gwiezdne Wojny, Wojny Klonów</figcaption>
+      </figure>
 
+      <figure>
+        <blockquote>
+          Tam gdzie jest wola, znajdzie się metoda.
+        </blockquote>
+        <figcaption>Autor nieznany</figcaption>
+      </figure>
+
+      <figure>
+        <blockquote>
+          Przeciwności losu to najlepszy test dla przyjaźni.
+        </blockquote>
+        <figcaption>Autor nieznany</figcaption>
+      </figure>
+
+      <figure>
+        <blockquote>
+          Uwierz w siebie, albo nikt inny tego nie zrobi.
+        </blockquote>
+        <figcaption>Autor nieznany</figcaption>
+      </figure>
 
       <section>
         <h2>Instruktorskie</h2>
+
+        <figure>
+          <blockquote>
+            Kto nie chce ubrudzić się błotem, ściółką i ludzką marnością, nie
+            powinien brać się za harcerstwo.
+          </blockquote>
+          <figcaption>Marek Kamecki</figcaption>
+        </figure>
 
         <figure>
           <blockquote>
