--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@ blockquote {
   <body>
     <h1>Cytaty</h1>
     <p>Na tej stronie zebrałem wiele inspirujących cytatów związanych z
-    harcerstwem, wychowaniem i życiem</p>
+    harcerstwem, wychowaniem i życiem.</p>
+    <p>Jeśli chcesz podzielić się innym fajnym cytatem to możesz przesłać mi na
+    maila (patryk.niedzwiedzinski[@]zhr.pl) albo bezpośrednio dodać na
+    <a href="https://github.com/19pdh/cytaty">GitHubie</a>.</p>
     <div class="quotes">
 
       <figure>
