Add link colors

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     background: #111;
     color: #fff;
   }
+  a:link { color: #ee9; }
+  a:visited { color: #bbf; }
 }
 body {
   max-width: 40em;
