--- a/index.html
+++ b/index.html
@@ -277,6 +277,16 @@ blockquote {
           <figcaption>Andrzej Małkowski</figcaption>
         </figure>
 
+        <figure>
+          <blockquote>
+            Człowiek nie może być tylko wychowywany. Musi wychowywać samego
+            siebie, być dla siebie wychowawcą.
+          </blockquote>
+          <figcaption>św. Jan Paweł II</figcaption>
+        </figure>
+
+
+
 
       </section>
 
